--- a/res/layout/activity_status.xml
+++ b/res/layout/activity_status.xml
@@ -19,6 +19,14 @@
         android:textSize="30sp" />
 
     <EditText
+        android:id="@+id/textCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="10dp"
+        android:text="000" />
+
+    <EditText
         android:id="@+id/editText"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
