--- a/res/layout/activity_status.xml
+++ b/res/layout/activity_status.xml
@@ -3,6 +3,7 @@
     android:id="@+id/LinearLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/background"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -14,6 +15,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:background="@android:color/white"
         android:gravity="center"
         android:text="@string/titleStatus"
         android:textSize="30sp" />
@@ -31,9 +33,11 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
+        android:background="#cfff"
         android:ems="10"
         android:gravity="top|center_horizontal"
-        android:hint="@string/hintText" >
+        android:hint="@string/hintText"
+        android:textColorLink="@android:color/white" >
 
         <requestFocus />
     </EditText>
